# docubot

./: .clinerules  .env_sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: design.md  requirements.md
src/: chat_controller.py  gradio_interface.py  main.py  openai_client.py
tests/: test_chat_controller.py  test_gradio_interface.py  test_openai_client.py
