[tool.poetry]
name = "my_project"
version = "0.1.0"
description = "A Python boilerplate project"
authors = ["Your Name"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
gradio = "^4.0.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"